--- a/lab-09.Rmd
+++ b/lab-09.Rmd
@@ -220,10 +220,27 @@ compas %>%
     title = "The relationship between risk scores and actual recidivism"
   )
 
+
+
+compas %>%
+  ggplot(aes(
+    x = two_year_recid,
+    y = decile_score
+  ))+
+  geom_jitter()+
+ # geom_smooth(formula = y~x, se = FALSE, color = "black")+
+   labs(
+    x = "Whether the defendant recidivated within two years (0 = no, 1 = yes)",
+    y = "COMPAS risk score",
+    title = "The relationship between risk scores and actual recidivism"
+  )
+
 ```
 
 Assuming I did this correctly, it appears that recidivism, on average,  increases COMPAS risk score.
 
+
+#### Alternate plot
 ```{r alt plot?}
 
 compas %>%
@@ -231,6 +248,14 @@ compas %>%
     x = decile_score
   ))+
   geom_histogram()+
+      geom_text(
+    stat = "count",
+    aes(x = decile_score,
+    y = ..count..,
+    label = ..count..),
+    size = 3.5, 
+    color = "black",
+    vjust = -0.2) +
   facet_wrap(~ two_year_recid, labeller = as_labeller(c(`0` = "Recidivated within two years", `1` = "Did not recidivate within two years")))+
   labs(
     x = "COMPAS risk score from 1-10 (higher = greater risk)",
@@ -238,4 +263,69 @@ compas %>%
     title = "The relationship between risk scores and actual recidivism"
   )
 
+
+compas %>%
+  ggplot(aes(
+    x = 
+  ))+
+  
+
+
 ```
+
+This plot is more showing the breakdown of COMPAS scores based on recidivism.
+
+### COMPAS Accuracy
+
+```{r compas accuracy, warning = FALSE}
+
+compas_accuracy <- compas %>%
+  mutate(compas_accurate = case_when(
+    decile_score >= 7 & two_year_recid == 1 ~ "Accurate, committed crime",
+    decile_score < 7 & two_year_recid == 1 ~ "Not acccurate, committed crime",
+    decile_score <= 4 & two_year_recid == 0 ~ "Accurate, no further crime",
+    decile_score > 4 & two_year_recid == 0 ~ "Not accurate, no further crime"
+  ))
+
+percent_accurate <- compas %>%
+  mutate(compas_accurate = case_when(
+    decile_score >= 7 & two_year_recid == 1 ~ 1,
+    decile_score < 7 & two_year_recid == 1 ~ 0,
+    decile_score <= 4 & two_year_recid == 0 ~ 1,
+    decile_score > 4 & two_year_recid == 0 ~ 0
+  ))
+
+compas_accuracy %>%
+  ggplot(aes(
+    x = compas_accurate,
+    fill = compas_accurate
+  ))+
+  geom_histogram(stat="count")+
+  scale_fill_manual(values=c("green4", "green4","red2", "red2"))+
+  coord_flip()+
+  labs(
+    x = "Accuracy of COMPAS",
+    y = NULL,
+    title = "How accurate is the COMPAS based on recidivism"
+  )+
+  theme(legend.position = "none")
+
+
+df_percent <- count(percent_accurate, compas_accurate)
+
+
+accurate <- df_percent %>%
+  filter(compas_accurate == 0) %>% select(n)
+
+innacute <- df_percent %>%
+  filter(compas_accurate == 1) %>% select(n)
+
+total <- df_percent %>% summarize(sum = sum(n))
+
+accurate/total*100
+
+```
+
+It seems to be accurate to a degree. There is a high amount of people that are ambiguous (i.e. not having a high or low degree of crime).
+
+44% accuracy
