--- a/other-lab-09.Rmd
+++ b/other-lab-09.Rmd
@@ -1,13 +1,15 @@
 ---
 title: "Lab 09B: Algorithmic Bias"
 author: "Benjamin Egan"
-date: "3/26/25"
+date: "4/1/25"
 output: github_document
 ---
 
 Here is the link to the assignment page: https://datascience4psych.github.io/DataScience4Psych/lab09.html. This includes the relevant information for the assignment alongside required questions I needed to answer.
 
-```{r load-packages, message = FALSE, echo = FALSE}
+#### Note - This assignment is a work in progress and my answers may reflect this
+
+```{r load-packages, message = FALSE, warning = FALSE, echo = FALSE}
 library(tidyverse)
 library(fairness)
 library(janitor)
@@ -375,7 +377,7 @@ race_graph <- compas %>%
 filter(race == c("Caucasian","African-American"))
 
 
-race_graph %>%
+COMPAS_race_graph <- race_graph %>%
   ggplot(aes(
     x = decile_score
   ))+
@@ -387,6 +389,7 @@ race_graph %>%
     title = "Race disparities on the COMPAS scores"
   )
 
+COMPAS_race_graph
 
 race_accurate <- race_graph %>%
   mutate(race_compas_accurate = case_when(
@@ -555,4 +558,93 @@ race_graph %>%
 ```
 
 Here you can tell there are way less white defendants higher up on risk scale, and that African Americans have more prior convictions. It looks like the algorithm doesn't weigh convictions differently? I'm actually not quite sure.
+
+13. [I'll start by saying I didn't exactly understand the question] I think there is evidence supporting ProPublica’s claim. There is a higher amount of false positives for Black defendants compared to white defendants. Additionally, the accuracy is poor (44%), suggesting that focusing on calibration might lead to errors.
+
+## Part 5 - Designing a more fair algorithm
+
+14. One of the first things I would look at is the the charge types. The current algorithm does not take into account the type of crimes committed. I am thinking more violent crimes would lead to a better measure of likelihood of committing another crime. I am also thinking that juvenile offenses could be a good predictor, as people with more juvenile offenses and more felonies (compared to misdemeanors) would indicate future crime.
+
+15. A fair algorithm would probably have to weigh human bias. This could mean understanding and factoring in racism, sexism, etc. For example, black people might be more likely to have a false positive arrest (i.e. arrested while innocent). To some it might look mathematically wrong to weight black defendants differently compared to white defendants, but this might increases our accuracy.
+
+16. Algorithms should be uses as a guide, not as a decision maker. Knowing the current accuracy of COMPAS is so low, a human needs to make the final decision as to an individual's status. Based on what I've seen, I would make it  policy that any evidence for creating policy that is supported by an algorithm need to be taken through a period of review. In this review, I would create similar analyses in this lab, and make sure that the algorithm is up to the same standard as scientific review (i.e. alpha .05 standard), ensuring that the algorithm is not due to chance.
+
+# Stretch Goal
+
+Note this will be a work in progress, as it is a stretch goal and I am still learning.
+
+*17. I reran the visualization from above, showing prior convictions.
+
+```{r stretch other prior and risk score visual}
+
+race_graph %>%
+  ggplot(aes(
+    x = decile_score,
+    y = priors_count
+  ))+
+  geom_smooth()+
+  geom_jitter(width = .15, alpha = .6)+
+  facet_wrap(~race)+
+  theme_bw()+
+  labs(
+    x = "Risk score",
+    y = "Number of prior offenses",
+    title = "Race discrepancies for the number of convictions"
+  )
+
+```
+
+As I explained above, the distribution for black defendants is more evenly spaced out compared to white defendants, which is more skewed left. It looks similar to the other graph, just looking at risk score.
+
+```{r extra point}
+COMPAS_race_graph
+```
+
+##### Question 19 - other variables of interest
+
+```{r COMPAS and other variables}
+
+race_graph %>%
+  ggplot(aes(
+    x = decile_score,
+    fill = c_charge_degree
+  ))+
+  geom_histogram(stat = "count")+
+  scale_fill_manual(labels = c("Felony", "Misdemeanor"), values = c("red3", "yellow3"))+
+  facet_grid(c_charge_degree ~ race, labeller = as_labeller( c(
+        'African-American' = "Black",
+        'Caucasian' = "White",
+        'F' = "Felony",
+       'M' = "Misdemeanor"
+        )))+
+  theme_bw()+
+  labs(
+    x = "Risk score",
+    y = "Number of prior offenses",
+    title = "Race discrepancies for the number of convictions"
+      )+
+    theme(legend.position = "none")
+
+```
+
+Misdemeanors are generally your least severe charges. Felonies are murder, rape, breaking into cars, breaking into houses, they are more serious crimes. We can see there are a lot more felonies associated with black dependents than compared to white dependents. I would guess that the type of charge certainly helps lead to the disparities in risk score.
+
+### Building a fairer algorithm
+
+```{r start build}
+
+recid_model <- glm(
+  two_year_recid ~ age + priors_count + c_charge_degree,
+  data = compas,
+  family = binomial()
+)
+
+
+compas <- compas %>%
+  mutate(
+    predicted_prob = predict(recid_model, type = "response"),
+    our_high_risk = predicted_prob >= 0.5
+  )
+
+```
 
