--- a/other-lab-09.Rmd
+++ b/other-lab-09.Rmd
@@ -208,6 +208,18 @@ compas %>%
 
 ```{r risk score to recidivism visual}
 
+compas %>%
+  ggplot(aes(
+    x = decile_score
+  ))+
+  facet_wrap(~two_year_recid)+
+  geom_histogram()+
+  theme_bw()+
+   labs(
+    x = "Whether the defendant recidivated within two years (0 = no, 1 = yes)",
+    y = "COMPAS risk score",
+    title = "The relationship between risk scores and actual recidivism"
+  )
 
 compas %>%
   ggplot(aes(
@@ -222,22 +234,9 @@ compas %>%
     title = "The relationship between risk scores and actual recidivism"
   )
 
-compas %>%
-  ggplot(aes(
-    x = decile_score
-  ))+
-  facet_wrap(~two_year_recid)+
-  geom_histogram()+
-  theme_bw()+
-   labs(
-    x = "Whether the defendant recidivated within two years (0 = no, 1 = yes)",
-    y = "COMPAS risk score",
-    title = "The relationship between risk scores and actual recidivism"
-  )
-
 ```
 
-Assuming I did this correctly, it appears that recidivism, on average,  increases COMPAS risk score.
+Assuming I did this correctly, it appears that recidivism, on average, increases COMPAS risk score.
 
 
 #### Alternate plot
@@ -248,15 +247,17 @@ compas %>%
     x = decile_score
   ))+
   geom_histogram()+
-      geom_text(
-    stat = "count",
+  geom_text(
     aes(x = decile_score,
-    y = ..count..,
-    label = ..count..),
+        y = ..count..,
+        label = ..count..),
+    stat = "count",
     size = 3.5, 
     color = "black",
     vjust = -0.2) +
-  facet_wrap(~ two_year_recid, labeller = as_labeller(c(`0` = "Recidivated within two years", `1` = "Did not recidivate within two years")))+
+  facet_wrap(~ two_year_recid, 
+             labeller = as_labeller(c(`0` = "Recidivated within two years", `1` = "Did not recidivate within two 
+                                      years")))+
   labs(
     x = "COMPAS risk score from 1-10 (higher = greater risk)",
     y = NULL,
